tests/gen-test/test_out/compile-time.txt
error: variable or function not found
 --> compile-time\root.ctl:7:20
  |
7 | fn main -> uint => run
  |                    ^^^ this does not exist
  |
  = info: queried 'run'

error: not all blocks were closed when typechecking function
 --> compile-time\root.ctl:7:4
  |
7 | fn main -> uint => run
  |    ---- info: happened in this function
  |
  = info: this is a bug in the compiler, please report it

info: mir repr of functions:


error: no entry points found
 = help: add '#[entry]' to a function that should take this role

